# dprint-plugin-cargo-toml

./: Cargo.toml  LICENSE  README.md  dprint.json
.github/workflows/: ci.yml  release.yml
src/: lib.rs
tests/: format_text.rs
tests/testcase_cnd/: Cargo.toml
tests/testcase_comit/: Cargo.expected.toml  Cargo.toml
