[package]
name = "dprint-cargo-toml"
version = "0.1.0"
authors = [ "Thomas Eizinger <thomas@eizinger.io>" ]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "lib", "cdylib" ]

[dependencies]
dprint-core = { version = "0.31", features = [ "wasm" ] }
itertools = "0.9.0"
rowan = "0.10.0"
serde = { version = "1.0.88", features = [ "derive" ] }
serde_json = "1.0"
toml-parse = "0.2.11"
